# C-Seminars

./: CMakeLists.txt  DynamicArr.cpp  DynamicArr.h  HanoiTowers.cpp  det.cpp  get_predict.cpp  get_triangle.cpp  main.cpp
BullsAndCows/: CMakeLists.txt  functions.cpp  functions.h  main.cpp
shared_ptr/: main.cpp  pointer.h
test/: test_model.py
test/models/vectorizers/: multi_RandomForest(data_6)_vectorizer.joblib
test_1/: test_model.py
test_1/models/vectorizers/: multi_RandomForestClassifier(data_9)_vectorizer.joblib
